# prompt_web_test_recoder

./: README.md  app.py  check_azure_openai.py  generate_workflow_json.py  main.py  pyproject.toml  requirements.txt  start.sh
artifacts/: artifacts.py  output_schema_1.json
constant/: const_config.py
dataclass/: conceptual_objects.py
libs/artifacts/: artifacts.py
libs/llm_service/: azure_client.py  grounder.py  openai_client.py
libs/playwright/: config.py  locator.py  runner.py  step_exporter.py
llm_service/: abstract_llm_client.py  azure_client.py  grounder.py  openai_client.py
prompts/: prompts_template.py
pw_lib_ext/: config.py  locator.py  runner.py  step_exporter.py
