[project]
name = "prompt-web-test-recoder"
version = "0.1.0"
description = "Test follows prompt, navigates web, validates and produces traces of navigation and test verification in structured json format. Supports both headed and headless navigation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ipython>=9.9.0",
    "openai>=2.14.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "playwright>=1.57.0",
    "pytest~=7.4.4",
    "pytest-html>=4.0.0",
    "pytest-html-reporter>=0.2.6",
    "pytest-playwright>=0.7.2",
    "pytest-xdist>=3.3.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "regex>=2024.5.15",
    "streamlit>=1.52.2",
    "tqdm>=4.67.1",
]
